# mypoke-tgc-sync-svc

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  database_schema.sql  docker-compose.yml  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  sync.py  sync_job.py
docs/ai/: ADR.md  AI.md  ARCH.md  README-AI.md  STANDARDS.md  VISION.md
migrations/: 0001_performance_indexes.sql  0002_canonical_updated_at.sql
src/mypoke_sync/: d1_client.py  database.py  local_index.py  main.py  models.py  pokeapi_client.py  sync.py  validator.py
src/mypoke_sync/utils/: phash.py  retry.py
src/mypoke_tgc_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_d1_client.py  test_sync.py  test_sync_integration.py
