[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mypoke_tgc_sync"
version = "0.1.0"
description = "Sync Pokémon TCG data directly to Cloudflare D1"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
    "pillow>=10.0.0",
    "imagehash>=4.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.3.0",
    "mypy==1.9.0",
    "pytest==8.1.1",
    "pytest-asyncio==0.23.5",
    "pytest-cov==4.1.0",
    "pre-commit==3.6.2",
    "types-Pillow==10.2.0.20240213",
]

[project.scripts]
mypoke-sync = "mypoke_sync.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, letting ruff formatter handle this
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # You can set this to true later as you add more types
check_untyped_defs = true
mypy_path = "src"

[[tool.mypy.overrides]]
# Ignore missing typing stubs for specific libraries
module = [
    "imagehash.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["src"]
